@@ -1,3 +1,8 @@
+2014-02-03  Andrey Belevantsev  <abel@ispras.ru>
+
+	PR rtl-optimization/57662
+	* g++.dg/pr57662.C: New test.
+
 2014-02-02  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* gcc.dg/vmx/3b-15.c: Remove special handling for little endian.
